[gd_scene load_steps=2 format=3 uid="uid://c2mk21au5w4xs"]

[ext_resource type="Script" path="res://Prog_122b.gd" id="1_ug13p"]

[node name="Prog_122b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ug13p")

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 522.0
offset_right = 444.0
offset_bottom = 616.0
text = "Clear"

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 525.0
offset_right = 222.0
offset_bottom = 624.0
text = "Calculate"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 525.0
offset_right = 682.0
offset_bottom = 619.0
text = "Exit"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 27.0
offset_right = 1079.0
offset_bottom = 370.0

[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
